--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   percent_indicator: ^4.2.3
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
